--- a/admin.html
+++ b/admin.html
@@ -1,299 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Admin — Sandstone Editor</title>
-<link rel="stylesheet" href="style.css"/>
-<style>
-  /* admin küçük ek stiller */
-  .admin-ui{
-    position:fixed; right:12px; top:64px; width:320px;
-    background:rgba(0,0,0,0.85); padding:12px; border-radius:8px;
-    z-index:2000; color:#fff; font-family:Arial, sans-serif;
-  }
-  .admin-ui label{display:block;margin-top:8px;font-size:13px}
-  .admin-ui input[type="text"], .admin-ui select{width:100%;padding:8px;margin-top:6px;border-radius:6px;border:1px solid #222;background:#0b0d10;color:#fff}
-  .admin-ui button{margin-top:8px;padding:8px 10px;border-radius:6px;background:#1b6;color:#000;border:none;cursor:pointer}
-  .hint{font-size:12px;opacity:.85;margin-top:8px}
-  /* grid overlay */
-  #gridOverlay{
-    position:absolute; inset:0; pointer-events:none; z-index:150;
-    background-image:
-      linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px),
-      linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px);
-    background-size: var(--grid-size) var(--grid-size);
-    mix-blend-mode: overlay;
-  }
-  .draggable-dot{
-    position:absolute; width:20px; height:20px; border-radius:50%;
-    transform:translate(-50%,-50%); cursor:grab; z-index:180;
-    box-shadow:0 8px 20px rgba(0,0,0,0.6);
-  }
-  .draggable-dot.dragging{cursor:grabbing;opacity:.95}
-  .controls-row{display:flex;gap:8px;margin-top:8px}
-  .small-btn{padding:6px 8px;background:#222;border-radius:6px;border:none;color:#fff;cursor:pointer}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Panel</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="theme-dark">
-  <header class="top-bar" style="z-index:2100;padding:10px 14px;">
-    <div style="font-weight:700;color:#fff">ADMIN — Sandstone Editor</div>
-    <div><a href="index.html" target="_blank" style="color:#fff">Ana siteyi aç</a></div>
-  </header>
+<body class="dark">
 
-  <!-- ad walls (aynı stilde ana sayfa ile) -->
-  <div class="ad-wall left"></div>
-  <div class="ad-wall right"></div>
+<h2>Admin Panel</h2>
 
-  <!-- map area -->
-  <main id="adminMapWrapper" class="map-wrapper" style="z-index:100">
-    <img id="map" src="map.png" alt="map" style="display:block;max-width:100%;max-height:100%;object-fit:contain"/>
-    <div id="pointsLayer"></div>
-    <div id="gridOverlay"></div>
-  </main>
+<select id="type">
+  <option value="smoke">Smoke</option>
+  <option value="flash">Flash</option>
+  <option value="molly">Molly</option>
+</select>
 
-  <!-- admin UI -->
-  <aside class="admin-ui" aria-label="Admin controls">
-    <label>Tür</label>
-    <select id="typeSelect">
-      <option value="smoke">Smoke</option>
-      <option value="flash">Flash</option>
-      <option value="molly">Molly</option>
-      <option value="grenade">Grenade</option>
-    </select>
+<input id="video" placeholder="Video link">
+<button onclick="addPoint()">Nokta Ekle</button>
 
-    <label>Video (YouTube embed veya mp4 link)</label>
-    <input id="videoInput" placeholder="https://www.youtube.com/embed/..." type="text"/>
+<div id="map-container">
+  <img src="map.png" id="map">
+  <div id="grid"></div>
+</div>
 
-    <div class="controls-row">
-      <button id="addPointBtn" class="small-btn">➕Ekle</button>
-      <button id="toggleGridBtn" class="small-btn">📐 Grid Gizle</button>
-    </div>
-
-    <div class="controls-row">
-      <button id="saveBtn" class="small-btn">💾 Kaydet</button>
-      <button id="exportBtn" class="small-btn">⬇ Export</button>
-      <button id="importBtn" class="small-btn">⬆ Import</button>
-      <input id="importFile" type="file" accept=".json" style="display:none"/>
-    </div>
-
-    <div class="hint">Snap: <strong>25px</strong>. Mobilde sürükleme otomatik kapalı.</div>
-    <div class="hint" style="margin-top:10px">— Çift tık: düzenle, sağ tık: sil.</div>
-  </aside>
-
-<script>
-/* Robust admin script — pointer events, 25px snap, localStorage sync */
-document.addEventListener('DOMContentLoaded', ()=>{
-
-  const STORAGE_KEY = 'st_points_v1';
-  const GRID = 25;
-  const mapImg = document.getElementById('map');
-  const pointsLayer = document.getElementById('pointsLayer');
-  const addPointBtn = document.getElementById('addPointBtn');
-  const saveBtn = document.getElementById('saveBtn');
-  const exportBtn = document.getElementById('exportBtn');
-  const importBtn = document.getElementById('importBtn');
-  const importFile = document.getElementById('importFile');
-  const toggleGridBtn = document.getElementById('toggleGridBtn');
-  const gridOverlay = document.getElementById('gridOverlay');
-  const typeSelect = document.getElementById('typeSelect');
-  const videoInput = document.getElementById('videoInput');
-
-  // set grid css size
-  document.documentElement.style.setProperty('--grid-size', GRID + 'px');
-
-  const isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
-
-  // helpers
-  function getStored(){ try{ return JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]'); } catch(e){ return [] } }
-  function setStored(list){ localStorage.setItem(STORAGE_KEY, JSON.stringify(list)); /* triggers storage event */ }
-
-  function rect(){ return mapImg.getBoundingClientRect(); }
-
-  function pxToPercentAbs(clientX, clientY){
-    const r = rect();
-    const relX = Math.max(0, Math.min(clientX - r.left, r.width));
-    const relY = Math.max(0, Math.min(clientY - r.top, r.height));
-    return { left: (relX / r.width * 100).toFixed(4) + '%', top: (relY / r.height * 100).toFixed(4) + '%' };
-  }
-  function percentToClient(leftPct, topPct){
-    const r = rect();
-    const x = r.left + (parseFloat(leftPct) / 100 * r.width);
-    const y = r.top + (parseFloat(topPct) / 100 * r.height);
-    return { x, y };
-  }
-  function snapClient(clientX, clientY){
-    const r = rect();
-    const relX = Math.max(0, Math.min(clientX - r.left, r.width));
-    const relY = Math.max(0, Math.min(clientY - r.top, r.height));
-    const snappedX = Math.round(relX / GRID) * GRID;
-    const snappedY = Math.round(relY / GRID) * GRID;
-    return { x: r.left + snappedX, y: r.top + snappedY };
-  }
-
-  // render stored points as draggable elements
-  function renderStored(){
-    pointsLayer.innerHTML = '';
-    const list = getStored();
-    list.forEach((pt, idx) => {
-      const el = document.createElement('div');
-      el.className = 'draggable-dot ' + pt.type;
-      el.style.left = pt.left;
-      el.style.top = pt.top;
-      el.dataset.index = idx;
-      el.dataset.video = pt.video || '';
-      el.title = pt.type + (pt.video ? ' (video)' : '');
-      // double click edits
-      el.addEventListener('dblclick', (e)=>{
-        e.stopPropagation();
-        typeSelect.value = pt.type;
-        videoInput.value = pt.video || '';
-        // mark this element as edit target
-        document.querySelectorAll('.draggable-dot').forEach(x=>x.style.outline='');
-        el.style.outline = '2px solid #ffd';
-        el.dataset.edit = '1';
-      });
-      // right-click deletes
-      el.addEventListener('contextmenu', (ev)=>{
-        ev.preventDefault();
-        if(confirm('Noktayı silmek istiyor musun?')){
-          const arr = getStored(); arr.splice(idx,1); setStored(arr); renderStored();
-        }
-      });
-
-      // pointer based drag for mouse & touch
-      if(!isMobile){
-        el.addEventListener('pointerdown', (ev)=>{
-          ev.preventDefault();
-          el.setPointerCapture(ev.pointerId);
-          el.classList.add('dragging');
-          // move handler
-          const onMove = (m) => {
-            const snapped = snapClient(m.clientX, m.clientY);
-            const pct = pxToPercentAbs(snapped.x, snapped.y);
-            el.style.left = pct.left;
-            el.style.top = pct.top;
-          };
-          const onUp = (u) => {
-            el.releasePointerCapture(ev.pointerId);
-            el.classList.remove('dragging');
-            document.removeEventListener('pointermove', onMove);
-            document.removeEventListener('pointerup', onUp);
-            // save final pos
-            const idx2 = parseInt(el.dataset.index,10);
-            if(!isNaN(idx2)){
-              const arr = getStored();
-              arr[idx2].left = el.style.left;
-              arr[idx2].top = el.style.top;
-              arr[idx2].video = el.dataset.video || arr[idx2].video || '';
-              setStored(arr);
-              renderStored(); // re-render to update indices
-            }
-          };
-          document.addEventListener('pointermove', onMove);
-          document.addEventListener('pointerup', onUp);
-        });
-      } else {
-        // mobile: disable dragging (to avoid accidental moves) — but we support tap-to-add instead
-        el.style.touchAction = 'none';
-      }
-
-      pointsLayer.appendChild(el);
-    });
-  }
-
-  // add new point at snapped center OR clicked location
-  addPointBtn.addEventListener('click', ()=>{
-    const r = rect();
-    const centerX = r.left + r.width/2;
-    const centerY = r.top + r.height/2;
-    const snapped = snapClient(centerX, centerY);
-    const pct = pxToPercentAbs(snapped.x, snapped.y);
-    const arr = getStored();
-    arr.push({ type: typeSelect.value, left: pct.left, top: pct.top, video: videoInput.value || '' });
-    setStored(arr);
-    renderStored();
-  });
-
-  // allow clicking the map to add (snap)
-  document.getElementById('adminMapWrapper').addEventListener('click', (e)=>{
-    // ignore clicks that hit controls
-    const targetId = e.target.id || '';
-    if(targetId === 'map' || targetId === 'gridOverlay'){
-      const snapped = snapClient(e.clientX, e.clientY);
-      const pct = pxToPercentAbs(snapped.x, snapped.y);
-      const arr = getStored();
-      arr.push({ type: typeSelect.value, left: pct.left, top: pct.top, video: videoInput.value || '' });
-      setStored(arr);
-      renderStored();
-    }
-  });
-
-  // save button updates selected edit element if any, otherwise not needed because we save on drag end
-  saveBtn.addEventListener('click', ()=>{
-    const editEl = document.querySelector('.draggable-dot[data-edit="1"]');
-    if(editEl){
-      const idx = parseInt(editEl.dataset.index,10);
-      const arr = getStored();
-      arr[idx].type = typeSelect.value;
-      arr[idx].video = videoInput.value || '';
-      setStored(arr);
-      editEl.dataset.edit = '0';
-      editEl.style.outline = '';
-      renderStored();
-      alert('Seçili nokta güncellendi.');
-      return;
-    }
-    alert('Kaydedildi.');
-  });
-
-  // export/import
-  exportBtn.addEventListener('click', ()=>{
-    const arr = getStored();
-    const blob = new Blob([JSON.stringify(arr,null,2)], { type:'application/json' });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url; a.download = 'sandstone_points.json'; a.click(); URL.revokeObjectURL(url);
-  });
-  importBtn.addEventListener('click', ()=> importFile.click());
-  importFile.addEventListener('change', (ev)=>{
-    const f = ev.target.files[0];
-    if(!f) return;
-    const r = new FileReader();
-    r.onload = (e)=>{
-      try{
-        const parsed = JSON.parse(e.target.result);
-        if(Array.isArray(parsed)){ setStored(parsed); renderStored(); alert('Import başarılı'); }
-        else alert('Geçersiz format.');
-      }catch(err){ alert('JSON okunamadı'); }
-    };
-    r.readAsText(f);
-  });
-
-  // toggle grid overlay
-  toggleGridBtn.addEventListener('click', ()=>{
-    const shown = gridOverlay.style.display !== 'none';
-    gridOverlay.style.display = shown ? 'none' : 'block';
-    toggleGridBtn.textContent = shown ? '📐 Grid Göster' : '📐 Grid Gizle';
-  });
-
-  // right click to prevent context menu on map (optional)
-  document.getElementById('adminMapWrapper').addEventListener('contextmenu', (e)=> e.preventDefault());
-
-  // re-render when storage changes (other tabs)
-  window.addEventListener('storage', (e)=>{
-    if(e.key === STORAGE_KEY) renderStored();
-  });
-
-  // initial render when image loaded (map size matters)
-  if(mapImg.complete){
-    renderStored();
-  } else {
-    mapImg.addEventListener('load', renderStored);
-  }
-  window.addEventListener('resize', renderStored);
-
-}); // DOMContentLoaded
-</script>
+<script src="app.js"></script>
 </body>
 </html>
