--- a/index.html
+++ b/index.html
@@ -1,49 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sandstone Lineup</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Standoff 2 Lineup</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="theme-dark">
+<body class="dark">
 
-  <!-- TOP BAR -->
-  <header class="top-bar">
-    <div class="left-controls">
-      <button onclick="filterType('all')">Tümü</button>
-      <button onclick="filterType('smoke')">Smoke</button>
-      <button onclick="filterType('flash')">Flash</button>
-      <button onclick="filterType('molly')">Molly</button>
-      <button onclick="filterType('grenade')">Grenade</button>
-    </div>
+<div class="topbar">
+  <button onclick="toggleTheme()">🌙 / ☀️</button>
+  <button onclick="toggleLock()">🔒 Kilitle</button>
+</div>
 
-    <div class="right-controls">
-      <button id="themeToggle">🌙</button>
-      <a href="/admin.html" target="_blank" title="Admin (sadece sen)">Admin</a>
-    </div>
-  </header>
+<div id="map-container">
+  <img src="map.png" id="map">
+  <div id="grid"></div>
+</div>
 
-  <!-- AD WALLS -->
-  <div class="ad-wall left" title="TikTok"></div>
-  <div class="ad-wall right" title="TikTok"></div>
-
-  <!-- MAP AREA -->
-  <main class="map-wrapper">
-    <img id="map" src="map.png" alt="Sandstone mini map" />
-    <div id="points"></div>
-  </main>
-
-  <!-- POPUP VIDEO -->
-  <div id="popup" class="popup hidden" role="dialog" aria-hidden="true">
-    <div class="popup-inner">
-      <button id="closePopup" class="close-btn">✖</button>
-      <div class="video-wrap">
-        <iframe id="popupVideo" src="" allowfullscreen allow="autoplay; encrypted-media"></iframe>
-      </div>
-    </div>
-  </div>
-
-  <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
