--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sandstone Lineup</title>
+<title>Sandstone</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="dark">
+<body>
 
 <div class="ad-wall left" onclick="openAd()"></div>
 
@@ -22,5 +22,6 @@
 </div>
 
 <script src="app.js"></script>
+<script>init(false);</script>
 </body>
 </html>
